versioned_docs/version-1.3-beta/services/rest_services.md
---
sidebar_position: 2
title: REST 服务
canonicalUrl: https://docs.apipark.com/zh-Hans/docs/next/services/rest_services
---

# REST 服务（API 网关）

REST服务是一种遵循REST（Representational State Transfer）架构风格的网络服务。它利用标准的HTTP方法来处理数据和交互，使得服务易于理解和使用。在APIPark平台上，REST服务可以被轻松创建和管理，以支持各种Web和移动应用的需求。

在API网关中，**REST服务** 是指一组 **REST API**（应用程序接口）集合，它们共同提供某种特定的功能或业务逻辑。**REST服务** 是平台上用于组织和管理API的基本单位，通过 **REST服务**，开发者可以定义、发布、管理和监控一系列API，供其他用户或系统调用。

消费者可以选择并订阅符合需求的**REST服务**。通过订阅，消费者可以获得对特定API接口的访问权限，以便根据实际业务需求定制化调用。系统采用高效的鉴权机制，确保在进行API调用时，访问请求携带有效的鉴权信息，保障数据的安全性和用户隐私。

# 创建并发布 REST 服务
## 1. 创建 REST 服务

进入 **工作空间** 模块，在侧边栏中选择 **服务**，然后 **创建服务**，填写：

- **服务名称**
- **服务 ID**：服务的唯一标识，一旦保存无法修改。
- **服务类型**，选择 **REST 服务**：
  - **AI 服务**：AI 网关，通过 APIPark 将不同的 AI 模型和 Prompt 转换为统一的 REST API。
  - **REST 服务**：传统的 API 网关，可以接入微服务或者 HTTP REST API。
- **API 请求前缀**：为该服务的所有 API 设置统一的请求前缀，一旦保存无法修改。
- **团队**：如果你加入了多个团队，你需要设置哪个团队负责管理这个服务。
- **订阅审核**：
  - **无需审核**：所有消费者都可以订阅和调用该服务。
  - **人工审核**：只有审核通过的消费者可以调用该服务。
- **服务分类**：选择服务发布到 API 门户的哪一个分类。

![](images/2024-10-26-15-36-33.png)

## 2. 填写 API 上游


## 3. 创建 API


## 4. 发布服务

✨ 如果服务的 **API、API 文档、使用介绍、上游** 发生了变化，你需要发布新版本让新配置生效。

在侧边栏选择 **发布**，然后点击 **新建版本**，填写：

- **版本号**
- **版本说明**

点击 **确认** 即可完成发布。

> 💡 如果这是首次发布服务，服务会出现在 **API 门户**，并且可以被 **消费者** 订阅。
> 💡 如果服务开启了 **人工审核**，订阅了服务的 **消费者** 需要等待 **服务管理员** 审核通过之后才能调用 API。

![](images/2024-10-27-01-44-55.png)

# <span style={{ color: "#999" }}>[可选]</span> 创建消费者并订阅服务

APIPark 提供了 **API 门户** 功能，用户可以将服务发布到 API 门户并且被其他用户查看、订阅和调用。

为了保证安全、规范地使用 API，并且降低 API 的管理成本。用户需要先创建 **消费者**，并通过消费者订阅服务，然后再使用消费者的 **授权证书** 来调用 API。

[🔗 了解更多：消费者](../consumers.md)

# <span style={{ color: "#999" }}>[可选]</span> 调用 API

[🔗 了解更多：调用API](../call_api.md)